--- a/public/index.html
+++ b/public/index.html
@@ -71,6 +71,7 @@
                 font-size: 13px;
                 line-height: 20px;
                 color: #454545;
+                text-align:center;
             }
             
         </style>
@@ -108,9 +109,11 @@
             </div>
             <div class="row">
                 <div class="row">
-                    <h1>The familiar made better</h1>
-                    <p style="margin-top:20px;">The desktop you're used to—with its familiar folders and icons—is still here. And not just still here, it's actually better than before, with a new task manager and streamlined file management. And you can always get to your desktop—and back to your Start screen again—with a tap or click.</p>
-                    <img src="http://res1.windows.microsoft.com/resbox/en/6.3/2013-win81ga/7ba61b3a-ea79-496b-8ec6-97cd83d5e7e9_19.jpg" alt="no image found" style="margin-top:20px;">
+                    <div class="col-md-8" style="margin-left:150px;">
+                        <h1>The familiar made better</h1>
+                        <p style="margin-top:20px;">The desktop you're used to—with its familiar folders and icons—is still here. And not just still here, it's actually better than before, with a new task manager and streamlined file management. And you can always get to your desktop—and back to your Start screen again—with a tap or click.</p>
+                        <img src="http://res1.windows.microsoft.com/resbox/en/6.3/2013-win81ga/7ba61b3a-ea79-496b-8ec6-97cd83d5e7e9_19.jpg" alt="no image found" style="margin-top:20px;">
+                    </div>
                 </div>
                 <div class="row">
                     <div class="col-md-3">
