--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
             #second-page #banner {
                 background-color:#00D8CC;
                 width:100%;
-                height:120px;
+                height:220px;
                 font-size: 13px;
                 line-height: 20px;
                 color: #454545;
@@ -115,20 +115,20 @@
                         <img src="http://res1.windows.microsoft.com/resbox/en/6.3/2013-win81ga/7ba61b3a-ea79-496b-8ec6-97cd83d5e7e9_19.jpg" alt="no image found" style="margin-top:20px;">
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-md-3">
+                <div class="row" style="text-align:center;">
+                    <div class="col-md-2" style="margin-left:70px;">
                         <h3>Programs</h3>
                         <p>Use them the way you always have. Word, Excel, PowerPoint, and other programs you count on work the way you're used to. Use a mouse and keyboard and organize your stuff in folders on the desktop.</p>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <h3>Security</h3>
                         <p>Windows Defender and Windows SmartScreen can help guard your PC against viruses, spyware, and other malicious software in real time. Family Safety gives your kids some independence while still keeping tabs on them.</p>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <h3>Mouse and keyboard</h3>
                         <p>You can use a mouse and keyboard to work on your Windows desktop the way you always have. And things you do with touch, like using apps from the Windows Store and getting around on your Start screen, can also be done with a mouse and keyboard.</p>
                     </div>
-                    <div class="col-md-3">
+                    <div class="col-md-2">
                         <h3>One view of everything</h3>
                         <p>When you're working on the familiar desktop, all apps you've opened will appear in your taskbar at the bottom of the screen. This includes both apps you opened from the desktop and apps from the Windows Store you opened from your Start screen.</p>
                     </div>
